--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "rxjs-reactive-state",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "RxJs powered state management library for Reactive Applications implementing observable store",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "dependencies": {
     "@types/lodash": "^4.14.156",
     "lodash": "^4.17.15",
-    "rxjs": "^6.5.5",
-    "user": "^0.0.0"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {},
   "scripts": {
